feat: implement tokens generate service
