# app/modules/user/models/user.ts
@@ -2,17 +2,22 @@ import { DateTime } from 'luxon'
 import hash from '@adonisjs/core/services/hash'
 import { compose } from '@adonisjs/core/helpers'
 import {
+  afterCreate,
   BaseModel,
   beforeCreate,
   beforeFetch,
   beforeFind,
   beforePaginate,
-  beforeSave,
   column,
+  manyToMany,
 } from '@adonisjs/lucid/orm'
 import { withAuthFinder } from '@adonisjs/auth/mixins/lucid'
 import { DbAccessTokensProvider } from '@adonisjs/auth/access_tokens'
 import * as model from '@adonisjs/lucid/types/model'
+
+import Role from '#modules/role/models/role'
+import type { ManyToMany } from '@adonisjs/lucid/types/relations'
+import IRole from '#modules/role/interfaces/role_interface'
 
 const AuthFinder = withAuthFinder(() => hash.use('argon'), {
   uids: ['email', 'username'],
@@ -21,6 +26,7 @@ const AuthFinder = withAuthFinder(() => hash.use('argon'), {
 
 export default class User extends compose(BaseModel, AuthFinder) {
   static accessTokens = DbAccessTokensProvider.forModel(User)
+
   static table = 'users'
 
   /**
@@ -57,6 +63,10 @@ export default class User extends compose(BaseModel, AuthFinder) {
    * Relationships
    * ------------------------------------------------------
    */
+  @manyToMany(() => Role, {
+    pivotTable: 'user_roles',
+  })
+  declare roles: ManyToMany<typeof Role>
 
   /**
    * ------------------------------------------------------
@@ -65,12 +75,12 @@ export default class User extends compose(BaseModel, AuthFinder) {
    */
   @beforeFind()
   @beforeFetch()
-  public static async softDeletes(query: model.ModelQueryBuilderContract<typeof User>) {
+  static async softDeletes(query: model.ModelQueryBuilderContract<typeof User>) {
     query.where('is_deleted', false)
   }
 
   @beforePaginate()
-  public static async softDeletesPaginate(
+  static async softDeletesPaginate(
     queries: [
       countQuery: model.ModelQueryBuilderContract<typeof User>,
       fetchQuery: model.ModelQueryBuilderContract<typeof User>,
@@ -79,17 +89,18 @@ export default class User extends compose(BaseModel, AuthFinder) {
     queries.forEach((query) => query.where('is_deleted', false))
   }
 
-  @beforeSave()
-  public static async hashPassword(user: User) {
-    if (user.$dirty.password) {
-      user.password = await hash.make(user.password)
+  @beforeCreate()
+  static async setUsername(user: User) {
+    if (!user.username) {
+      user.username = user.email.split('@')[0].trim().toLowerCase()
     }
   }
 
-  @beforeCreate()
-  public static async setUsername(user: User) {
-    if (!user.username) {
-      user.username = user.email.split('@')[0].trim().toLowerCase()
+  @afterCreate()
+  static async setDefaultRole(user: User) {
+    const role = await Role.findBy('slug', IRole.Slugs.USER)
+    if (role) {
+      await user.related('roles').attach([role.id])
     }
   }
 
